# entropy-engine

./: Cargo.toml  GEMINI.md  README.md  THE_ABYSS.md  example_project.json  imgui.ini
scripts/: fire_staff_ability.rhai  hello_traveller.rhai  npc_dialogue.rhai  test_component.rhai
src/: handlers.rs  lib.rs  main.rs  rhai_engine.rs  scripting_commands.rs  startup.rs
src/art_assets/: GLBImporter.rs  Model.rs  mod.rs
src/core/: AnimationState.rs  Grid.rs  HealthBar.rs  PlayerCharacter.rs  Rays.rs  RendererState.rs  SimpleCamera.rs  Texture.rs  Transform_2.rs  Viewport.rs  animation_system.rs  camera.rs  editor.rs  mod.rs  pipeline.rs  saved_state.rs  shadow_pipeline.rs  skinned_pipeline.rs  transform.rs  ui_pipeline.rs  vertex.rs
src/core/shaders/: gbuffer_fragment.wgsl  gizmo_fragment.wgsl  gizmo_vertex.wgsl  lighting.wgsl  shadows.wgsl  skinned.wgsl  sky.wgsl  ui.wgsl
src/game_behaviors/: attack.rs  chase.rs  defense.rs  dialogue_state.rs  dialogue_ui.rs  evade.rs  inventory.rs  inventory_ui.rs  melee.rs  mod.rs  ranged.rs  wander.rs
src/heightfield_landscapes/: Landscape.rs  LandscapeLOD.rs  QuadNode.rs  TerrainManager.rs
src/helpers/: landscapes.rs  load_project.rs  mod.rs  saved_data.rs  timelines.rs  utilities.rs  wasm_loaders.rs
src/kinematic_animations/: motion_path.rs  render_skeleton.rs
src/model_components/: Collectable.rs  NPC.rs  PlayerCharacter.rs  mod.rs
src/physics/: core.rs
src/procedural_grass/: grass.rs  grass.wgsl  mod.rs
src/procedural_heightmaps/: heightmap_generation.rs  mod.rs
src/procedural_models/: House.rs  mod.rs
src/procedural_particles/: flames.wgsl  flames2.wgsl  mod.rs  particle_system.rs  particles.wgsl
src/procedural_trees/: trees.rs  trees.wgsl
src/renderer_images/: mod.rs  st_image.rs
src/renderer_lighting/: LightState.rs
src/renderer_text/: fonts.rs  mod.rs  text_due.rs
src/renderer_videos/: mod.rs  st_video.rs
src/screen_capture/: mod.rs
src/shape_primitives/: Cube.rs  Pyramid.rs  Sphere.rs  mod.rs  polygon.rs
src/vector_animations/: animations.rs  mod.rs
src/video_export/: chat.rs  exporter.rs  frame_buffer.rs  mod.rs  pipeline.rs
src/video_export/shaders/: gizmo_vertex.wgsl  lighting.wgsl  primary_fragment.wgsl  primary_vertex.wgsl  vert_primary.wgsl
src/water_plane/: config.rs  mod.rs  water.rs  water.wgsl
