[package]
name = "entropy-engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "game"
path = "src/bin/game.rs"

[dependencies]
# For dependencies that use getrandom 0.2
getrandom_v2 = { package = "getrandom", version = "0.2", features = ["js"] }

# For dependencies that use getrandom 0.3
getrandom = { version = "0.3", features = ["wasm_js"] }

env_logger = "0.11"
pollster = "0.3"
bytemuck = { version = "1.19.0", features = ["derive"] }
# wgpu = "22.1.0"
# wgpu = "0.19"
wgpu = "27.0.1"
futures = "0.3.30"
uuid = { version = "1.8.0", features = ["v4", "js"] }
lyon_tessellation = "1.0.15"
strum = "0.26.3"
strum_macros = "0.26"
cgmath = "0.18.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.11.0"
fontdue = "0.9.2"
image = "0.25.5"
rand = "0.8.5"
munkres = "0.5.2"
directories = "5.0.1"
chrono = { version = "0.4.38", features = ["serde", "wasmbind"] }
anyhow = "1.0"
# wgpu = "22.1.0"
raw-window-handle = "0.6.2"
nalgebra = { version = "0.32.5", features = ["mint"] }
nalgebra-glm = "0.18.0"
tokio = { version = "1.41.0", features = ["fs", "full"] }
base64 = "0.22.1"
tiff = "0.9.1"
reqwest = { version = "0.12.4", features = ["json"] }
reqwest-graphql = "1.0.0"
regex = "1"
gloo-utils = "0.2.0"
rapier3d = { version = "0.20.0" }
lazy_static = "1.5.0"
# rayon = "1.10.0" # no wasm?
cursor-icon = "1.2.0"
tracing = "0.1.43"
noise = "0.8"
transform-gizmo = "0.8.0"
mint = "0.5.9"
exr = "1.74.0"

[dependencies.gltf]
features = ["utils"]
version = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "implement",
    "Win32_Media_MediaFoundation",
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Com_Urlmon",
    "Win32_Media_KernelStreaming",
    "Win32_System_Com_StructuredStorage",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.58.0"
windows-capture = "1.5.0"
meshopt = "0.4.1"
winit = { version = "0.30.12", features = ["rwh_06"] }
egui = "0.33.2"
egui-wgpu = { version = "0.33.2", features = ["winit"] }
egui-winit = "0.33.2"
device_query = "2.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Navigator"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-timer = "0.2.5"
js-sys = "0.3.83"